[package]
name = "protofiddle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
protofish = "0.5.2"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.96"
tungstenite = {version = "0.16.0", features = ["native-tls"]}
url = "2.2.2"
